# 0.13.2 (2020-11-XX)

  * (background) add .bg-current
  * (color) add .color-current
  * (variables) remove --link-color

# 0.13.1 (2020-11-09)

  * (border) add .br999
  * (border) drop .br[6-8]
  * (variables) add --br[1-5]
  * (type) add .fw1000
  * (type) depreciate .normal
  * (padding) add 1.75rem padding
  * (modules) move .div from border to modules

# 0.13.0 (2020-10-01)

  * (spacing) split margin and padding
  * (spacing) depreciate
  * (margin) add .ma, .mt, .mb
  * (grid) add row-wrap, col-wrap, row-reverse-wrap, col-reverse-wrap,
    including responsivity
  * responsivity: drop (xs|sd|md|ld|xl)- prefixes in favor of (xs|sd|md|ld|xl):

# 0.12.2 (2020-09-01)

  * (grid) xl responsive classes

# 0.12.1 (2020-08-28)

  * (spacing) add more responsive paddings

# 0.12.0 (2020-08-20)

  * (grid) add: .max(22|26|66|68)
  * (spacing) added paddings of 1.25rem, 1.5rem, and 2.5rem
  * (variables) prefix some variables with base- and default-
    feature is non-breaking but it is recommended to use the new variables
  * (variables) change --text-color to --base-color
  * (border) change b-{color} to bc-{{color}}
  * (border) set border-color as a variable
  * (grid) drop webkit-fill-available from minvh
  * drop support for IE and dead browser versions
  * remove depreciated styles

# 0.11.1 (2020-05-26)

  * (grid) add: .max(28)
  * (grid) add: .minvh
  * (normalize) depreciate: body min-height
  * (background) add: .bg-transparent
  * (reset) drop -reset.css in favor of reset-css package
  * split into base, utils, modules, debug
  * (copy) first alpha of copy module

# 0.10.0 (2020-04-15)

  * (type) add: .d[1-5]
  * (position) init: .position, .(left|right|top|bottom), .z([0-3]|9{1,4})
  * (grid) add: .min(8|10|12|14|16|18|20|24)
  * (grid) add: .max(34|35|38|42|44|51|52|54|55|78)
  * (grid) add: .max(w|h) { max-(width|height): 100% }
  * (grid) add: .xl-max
  * (border) add: .br[4-8]
  * (normalize) remove SVG fill

# 0.9.0 (2020-02-20)
