@@ -51,14 +51,14 @@ table {
   --base-color: var(--black, black);
   --default-border-width: 1px;
   --default-border-color: currentColor;
-  --default-bold-font-weight: bold;
+  --default-bold-fw: bold;
   --font-size: var(--base-font-size);
   --font-family: var(--base-font-family);
   --background-color: var(--base-background-color);
   --color: var(--base-color);
   --border-width: var(--default-border-width);
   --border-color: var(--default-border-color);
-  --bold-font-weight: var(--default-bold-font-weight);
+  --bold-fw: var(--default-bold-fw);
   --serif-font-family: Georgia, 'Times New Roman', serif;
   --sansserif-font-family: system-ui,
                              -apple-system,
@@ -325,7 +325,7 @@ hr {
 }
 
 .bold {
-  font-weight: var(--bold-font-weight);
+  font-weight: var(--bold-fw);
 }
 
 .fw100 {
