@@ -34,7 +34,7 @@
 .lh5 { line-height: var(--lh5); }
 
 .normal { font-weight: normal; } /* depreciated */
-.bold   { font-weight: var(--bold-font-weight); }
+.bold   { font-weight: var(--bold-fw); }
 .fw100  { font-weight: 100; }
 .fw200  { font-weight: 200; }
 .fw300  { font-weight: 300; }
